--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ titlename: 首页
     <div class="panel panel-primary">
       <div class="panel-heading">{{ site.locals.newest }}</div>
       {% for post in paginator.posts %}
-        <a  href='{{ post.url }}' class="list-group-item pjaxlink clearfix">
+        <a  href='{{ site.baseurl }}{{ post.url }}' class="list-group-item pjaxlink clearfix">
           {{post.title}}
           <span class="badge">{{ post.date | date:"%Y年%m月%d日" }}</span>
         </a>
@@ -24,7 +24,7 @@ titlename: 首页
         {% for tag in site.tags %} 
           {% if tag[0] == cate %}
             {% for post in tag[1] %}
-              <a  href='{{ post.url }}' class="list-group-item pjaxlink clearfix">
+              <a  href='{{ site.baseurl }}{{ post.url }}' class="list-group-item pjaxlink clearfix">
                 {{post.title}}
                 <span class="badge">{{ post.date | date:"%Y年%m月%d日" }}</span>
               </a>
